; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/posix1e/extr_mac_exec.c_mac_execve.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/posix1e/extr_mac_exec.c_mac_execve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mac = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_execve(i8* %0, i8** %1, i8** %2, %struct.mac* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca %struct.mac*, align 8
  store i8* %0, i8** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8** %2, i8*** %7, align 8
  store %struct.mac* %3, %struct.mac** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8**, i8*** %6, align 8
  %11 = load i8**, i8*** %7, align 8
  %12 = load %struct.mac*, %struct.mac** %8, align 8
  %13 = call i32 @__mac_execve(i8* %9, i8** %10, i8** %11, %struct.mac* %12)
  ret i32 %13
}

declare dso_local i32 @__mac_execve(i8*, i8**, i8**, %struct.mac*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
